# darts

./: .buildinfo  .bumpversion.cfg  .coverage.Jonass-MacBook-Pro-2.local.24606.854977  .coverage.Jonass-MacBook-Pro-2.local.24645.219070  .coverage.Jonass-MacBook-Pro-2.local.24653.464031  .coverage.Jonass-MacBook-Pro-2.local.24661.903648  .coverage.Jonass-MacBook-Pro-2.local.24662.492800  .coverage.Jonass-MacBook-Pro-2.local.24687.213640  .coverage.Jonass-MacBook-Pro-2.local.24691.817804  .coverage.Jonass-MacBook-Pro-2.local.24730.488686  .coverage.Jonass-MacBook-Pro-2.local.24758.628660  .coverage.Jonass-MacBook-Pro-2.local.24767.989727  .coverage.Jonass-MacBook-Pro-2.local.24768.499555  .coverage.Jonass-MacBook-Pro-2.local.24807.326150  .coverage.Jonass-MacBook-Pro-2.local.24819.460860  .coverage.Jonass-MacBook-Pro-2.local.24823.532189  .coverage.Keshavs-MBP.90445.114971  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Air-passengers-example.html  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTE.md  CONTRIBUTING.md  COVARIATES.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  PR.md  PROPOSAL.md  README.html  README.md  README_u8darts.md  RINormRegressionModels.ipynb  TODO.md  (+65 more)
.github/: CODEOWNERS  codecov.yml  pull_request_template.md
_modules/: darts.html  index.html  logging.html
_sources/: Air-passengers-example.ipynb.txt  README.rst.txt  devguide.rst.txt  examples.rst.txt  index.rst.txt  userguide.rst.txt
_static/: basic.css  copybutton.js  custom.css  documentation_options.js  pygments.css  webpack-macros.html
api/: u8timeseries.Arima.html  u8timeseries.AutoArima.html  u8timeseries.AutoRegressiveModel.html  u8timeseries.ExponentialSmoothing.html  u8timeseries.KthValueAgoBaseline.html  u8timeseries.Prophet.html  u8timeseries.StandardRegressiveModel.html  u8timeseries.Theta.html  u8timeseries.TimeSeries.html  u8timeseries.backtesting.html  u8timeseries.metrics.html  u8timeseries.models.html  u8timeseries.statistics.html
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
conda_recipe/: environment.yml
darts/: __init__.py  config.py  logging.py  test.sh  timeseries.py  timeseries_np.py  timeseries_old.py  typing.py  xtimeseries.py
darts_archive/: __init__.py  timeseries.py
datasets/: .gitattributes  ETTh1.csv  ETTh2.csv  ILINet.csv  ausbeer.csv  australian_tourism.csv  exchange_rate.csv  gasrate_co2.csv  heart_rate.csv  ice_cream_heater.csv  monthly-milk-incomplete.csv  monthly-milk.csv  monthly-sunspots.csv  taxi_new_york_passengers.csv  taylor.csv  temps.csv  us_gasoline.csv  wineind.csv  woolyrnq.csv
dev/: Theta method.ipynb  _births_and_deaths.csv  nz_destm_2000-2012.csv  sea_ice.csv
doc/: torch_forecasting_models.md
docs/: Makefile  SOLUTION_SUMMARY.md  fix_package_titles.py
examples/: 00-quickstart.ipynb  01-darts-intro.html  01-darts-intro.ipynb  01-multi-time-series-and-covariates.html  01-multi-time-series-and-covariates.ipynb  02-data-processing.html  02-data-processing.ipynb  02-multi-time-series-and-covariates.html  02-multi-time-series-and-covariates.ipynb  03-FFT-examples.html  03-FFT-examples.ipynb  03-data-processing.html  03-data-processing.ipynb  04-FFT-examples.html  04-FFT-examples.ipynb  04-RNN-examples.html  04-RNN-examples.ipynb  05-RNN-examples.html  05-RNN-examples.ipynb  05-TCN-examples.html  05-TCN-examples.ipynb  06-TCN-examples.html  06-TCN-examples.ipynb  06-Transformer-examples.html  06-Transformer-examples.ipynb  07-NBEATS-examples.html  07-NBEATS-examples.ipynb  07-Transformer-examples.html  07-Transformer-examples.ipynb  08-DeepAR-examples.html  08-DeepAR-examples.ipynb  08-NBEATS-examples.html  08-NBEATS-examples.ipynb  09-DeepAR-examples.html  09-DeepAR-examples.ipynb  09-DeepTCN-examples.html  09-DeepTCN-examples.ipynb  09-KALMAN-examples.ipynb  10-DeepTCN-examples.html  10-DeepTCN-examples.ipynb  (+113 more)
experiments/: README.md  archive_experiments_script.py  archive_model_builders.py  benchmark.ipynb  benchmark.py  benchmark_tools.py  builders.py  experiments_notebook .ipynb  experiments_script.py  experiments_v2.py  experiments_v3.py  model_builders.py  model_evaluation.py  optuna_search.py  param_space.py  results_plots.ipynb
generated_api/: darts.ad.aggregators.aggregators.html  darts.ad.aggregators.and_aggregator.html  darts.ad.aggregators.ensemble_sklearn_aggregator.html  darts.ad.aggregators.html  darts.ad.aggregators.or_aggregator.html  darts.ad.anomaly_model.anomaly_model.html  darts.ad.anomaly_model.filtering_am.html  darts.ad.anomaly_model.forecasting_am.html  darts.ad.anomaly_model.html  darts.ad.detectors.detectors.html  darts.ad.detectors.html  darts.ad.detectors.iqr_detector.html  darts.ad.detectors.quantile_detector.html  darts.ad.detectors.threshold_detector.html  darts.ad.html  darts.ad.scorers.difference_scorer.html  darts.ad.scorers.html  darts.ad.scorers.kmeans_scorer.html  darts.ad.scorers.nll_cauchy_scorer.html  darts.ad.scorers.nll_exponential_scorer.html  darts.ad.scorers.nll_gamma_scorer.html  darts.ad.scorers.nll_gaussian_scorer.html  darts.ad.scorers.nll_laplace_scorer.html  darts.ad.scorers.nll_poisson_scorer.html  darts.ad.scorers.norm_scorer.html  darts.ad.scorers.pyod_scorer.html  darts.ad.scorers.scorers.html  darts.ad.scorers.wasserstein_scorer.html  darts.ad.utils.html  darts.backtesting.backtesting.html  darts.backtesting.html  darts.config.html  darts.dataprocessing.dtw.cost_matrix.html  darts.dataprocessing.dtw.dtw.html  darts.dataprocessing.dtw.html  darts.dataprocessing.dtw.window.html  darts.dataprocessing.encoders.encoder_base.html  darts.dataprocessing.encoders.encoders.html  darts.dataprocessing.encoders.html  darts.dataprocessing.html  (+204 more)
guides/: Performance_tuning.md  covariates.md  covariates_tfms.md  global_forecasting_models.md  performance.md  torch_forecasting_models.md
hello_this_is_it/: package.rst_t
include/: dtw.h
neural_examples/: examples.ipynb
notebooks/: 00-quickstart.ipynb
quickstart/: 00-quickstart.html  (+1 more)
src/: bind.cpp  (+2 more)
u8darts/: README.md  pyproject.toml
u8darts/u8darts/: __init__.py
(+1337 files in other folders)
